  
  What's new in this drop
  ================================================================================
  * OpenOnSelection can now locate selected declarations which have a corresponding
    Java element (i.e. no local declaration is found).
  
  PRs Fixed in this Release
  ================================================================================
  1GE14NN: ITPJUI:WINNT - Unable to find/search for .class files
  1GJYFUO: ITPDUI:ALL - Evaluation hangs, evaluation thread is suspended
  1FWG453: ITPJCORE:WIN98 - OpenOnSelection - fails for default constructors
  1GDQD37: ITPJUI:WIN2000 - OpenOnSelection - Open on selection failure
  1GGZ2R7: ITPJUI:WIN2000 - Search for method refs failed
  1GKNXX6: ITPJCORE:WINNT - OpenOnSelection - no selection if targeting member type in default package
  1GE34EE: ITPJUI:WIN2000 - OpenOnSelection - initial selection wrong
  1GKEG73: ITPJCORE:WIN2000 - search (136): missing field declaration
  1GKB9YH: ITPJCORE:WIN2000 - search for field refs - incorrect results
  1GJL6EJ: ITPJCORE:WINNT - JavaConventions.validateClasspath: Compares against variable name
  1GDQEAS: ITPJUI:ALL - Indexer - delete unused indexes on Java core plug-in shutdown  
  1GKM4M9: ITPJCORE:WINNT - DCR: code select should work on declarations

  PRs Closed in this Release
  ===============================================================================
  1GKK930: ITPJCORE:WINNT - No code assist for Inner type
  1GIIDGX: ITPJUI:WINNT - open on type: does not work on some types
  1GKOFO6: ITPJCORE:WINNT - Internal error searching for class references
  1GK96A0: ITPJCORE:WINNT - NPE during search operation
  1GK9B5Q: ITPJCORE:WINNT - Class reference search broken
  1GBOFK5: ITPJUI:ALL - "References to" on methods in jars
  1GKECWC: ITPJCORE:WINNT - Organize Imports fails: Typerefs not complete
  1GKCH3N: ITPJCORE:WIN2000 - search: method refs - super call not found
  1GKB475: ITPJCORE:WINNT - StringIndexOutOfBoundsException on searchfor methods