@@ -37,8 +37,10 @@ public SelectionOnQualifiedAllocationExpression(AnonymousLocalTypeDeclaration an
 public TypeBinding resolveType(BlockScope scope) {
 	super.resolveType(scope);
 
-	// tolerate non visible match
-	if (binding == null || !(binding.isValidBinding() || binding.problemId() == ProblemReasons.NotVisible))
+	// tolerate some error cases
+	if (binding == null || 
+			!(binding.isValidBinding() || 
+				binding.problemId() == ProblemReasons.NotVisible))
 		throw new SelectionNodeFound();
 	if (anonymousType == null)
 		throw new SelectionNodeFound(binding);
