@@ -43,15 +43,25 @@ public TypeBinding resolveType(BlockScope scope) {
 	binding = scope.getBinding(tokens, this);
 	if (!binding.isValidBinding()) {
 		if (binding instanceof ProblemFieldBinding) {
+			// tolerate some error cases
+			if (binding.problemId() == ProblemReasons.NotVisible
+					|| binding.problemId() == ProblemReasons.InheritedNameHidesEnclosingName
+					|| binding.problemId() == ProblemReasons.NonStaticReferenceInConstructorInvocation
+					|| binding.problemId() == ProblemReasons.NonStaticReferenceInStaticContext) {
+				throw new SelectionNodeFound(binding);
+			}
 			scope.problemReporter().invalidField(this, (FieldBinding) binding);
 		} else if (binding instanceof ProblemReferenceBinding) {
+			// tolerate some error cases
+			if (binding.problemId() == ProblemReasons.NotVisible){
+				throw new SelectionNodeFound(binding);
+			}
 			scope.problemReporter().invalidType(this, (TypeBinding) binding);
 		} else {
 			scope.problemReporter().unresolvableReference(this, binding);
 		}
 		throw new SelectionNodeFound();
 	}
-
 	throw new SelectionNodeFound(binding);
 }
 public String toStringExpression() {
