@@ -35,8 +35,19 @@ public TypeBinding resolveType(BlockScope scope) {
 	binding = scope.getBinding(token, VARIABLE | TYPE | PACKAGE, this);
 	if (!binding.isValidBinding()) {
 		if (binding instanceof ProblemFieldBinding) {
+			// tolerate some error cases
+			if (binding.problemId() == ProblemReasons.NotVisible
+					|| binding.problemId() == ProblemReasons.InheritedNameHidesEnclosingName
+					|| binding.problemId() == ProblemReasons.NonStaticReferenceInConstructorInvocation
+					|| binding.problemId() == ProblemReasons.NonStaticReferenceInStaticContext){
+				throw new SelectionNodeFound(binding);
+			}
 			scope.problemReporter().invalidField(this, (FieldBinding) binding);
 		} else if (binding instanceof ProblemReferenceBinding) {
+			// tolerate some error cases
+			if (binding.problemId() == ProblemReasons.NotVisible){
+				throw new SelectionNodeFound(binding);
+			}			
 			scope.problemReporter().invalidType(this, (TypeBinding) binding);
 		} else {
 			scope.problemReporter().unresolvableReference(this, binding);
